[gd_scene load_steps=3 format=3 uid="uid://css0xnr6rupjb"]

[ext_resource type="Script" path="res://Scripts/player_ui.gd" id="1_wvcm7"]
[ext_resource type="Theme" uid="uid://caskmp53b5u7" path="res://Themes/ui.theme" id="2_37esr"]

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_wvcm7")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="LifeBar" type="ProgressBar" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_37esr")
value = 20.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="AmmoContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AmmoLeftLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "/10"
